Fix the alignment of the navigation at the meduim size

--- a/css/main.css
+++ b/css/main.css
@@ -22,4 +22,12 @@ html {
 
 }
 
-@media only screen and (min-width: 60em) {
+  .navigation {
+    text-align: center;
+  }
+
+@media only screen and (min-width: 38em) {
+  .navigation {
+    text-align: right;
+  }
+}
